# markdowned

./: .gitignore  README.md  REVIEW_FINDINGS.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-22-multi-workspace.md
docs/superpowers/specs/: 2026-03-22-multi-workspace-design.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: completion.rs  config.rs  file.rs  mod.rs  preview.rs  workspace.rs
src-tauri/src/models/: config.rs  workspace.rs
src-tauri/src/services/: keychain.rs  llm.rs  mod.rs  renderer.rs  watcher.rs
src-tauri/tests/: file_commands_test.rs  llm_test.rs  renderer_test.rs  workspace_test.rs
src/lib/: types.ts
src/lib/commands/: completion.ts  config.ts  file.ts  preview.ts  workspace.ts
src/lib/components/: CommandPalette.svelte  Editor.svelte  FileTree.svelte  FileTreeItem.svelte  Preview.svelte  SearchPanel.svelte  SettingsDialog.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte
src/lib/editor/: extensions.ts  ghost-text.ts  keybindings.ts  theme.ts
src/lib/stores/: editor.svelte.ts  workspace-logic.ts  workspace.svelte.ts
src/lib/utils/: resize.ts  scroll-sync.ts
src/routes/: +page.svelte
src/tests/: setup.ts
test/: placeholder.test.ts  release-workflow.test.ts  resize.test.ts  scroll-sync.test.ts  tauri-config.test.ts  workspace.test.ts
